tests/error/type_match/base_case_void_array_slice.bz
// error: array element type cannot be 'void'
function test()
{
	let _arr = [4: i32]();
	let _: [: void] = _arr;
}
